--- a/application/index/view/gene/index.html
+++ b/application/index/view/gene/index.html
@@ -16,7 +16,9 @@
 <body>
     <div class="wrapper">
         <!-- 头部 -->
-        <div class="header"></div>
+        <div class="header">
+            {include file="header"}
+        </div>
         
         <div class="content inner-wrap">
             <!-- 侧边栏 -->
@@ -98,8 +100,7 @@
        
     </div>
 
-    <script src="__STATIC__/js/public/jquery-1.8.3.min.js"></script>  
-    <script src="__STATIC__/js/public/header.js"></script>
+    <script src="__STATIC__/js/public/jquery-1.8.3.min.js"></script>
     <script src="__STATIC__/js/public/footer.js"></script>
     <script src="__STATIC__/js/my_genes/my_genes.js"></script>
 
