--- a/application/index/view/gene/index.html
+++ b/application/index/view/gene/index.html
@@ -96,12 +96,14 @@
             </div>
         </div>
         <!-- 底部 -->
-        <div class="footer"></div>
+        <div class="footer">
+            {include file="footer"}
+        </div>
        
     </div>
 
     <script src="__STATIC__/js/public/jquery-1.8.3.min.js"></script>
-    <script src="__STATIC__/js/public/footer.js"></script>
+    <!-- <script src="__STATIC__/js/public/footer.js"></script> -->
     <script src="__STATIC__/js/my_genes/my_genes.js"></script>
 
 </body>
