修复：手机端 基因查询页面丢失

--- a/application/mobile/view/user/my_gene.html
+++ b/application/mobile/view/user/my_gene.html
@@ -182,7 +182,7 @@
 			if(result == 'error'){
 				layer.open({
 					title:'提示！',
-					content:'<p style="text-align:center;">您的基因检测结果尚未生成！</p>',
+					content:'<p style="text-align:center;">您的基因检测结果尚未生成！</p><p style="text-align:center;">请在PC上登录网站，上传您的基因数据！</p>',
 					btn:['确定'],
 					btnAlign:'c',
 				});
