数据导入，基因数据

--- a/application/mobile/view/user/my_gene.html
+++ b/application/mobile/view/user/my_gene.html
@@ -2,193 +2,58 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,user-scalable=no" />
-		<title>基因报告</title>
-		<script type="text/javascript" src="__STATIC__/js/public/rem.js"></script>
-		<link rel="stylesheet" type="text/css" href="__STATIC__/css/public/public.css" />
-		<link rel="stylesheet" type="text/css" href="__STATIC__/css/public/public_head.css" />
-		<link rel="stylesheet" href="__STATIC__/css/home/genequery.css" />
+		 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,user-scalable=no" />
+		<title></title>
+		<!--public-->
+		<link rel="stylesheet" href="__STATIC__/css/public/public.css" />
+		<link rel="stylesheet" href="__STATIC__/css/public/public_head.css">
+		<link rel="stylesheet" href="__STATIC__/css/home/jiyin_daoru.css" />
+		<script src="__STATIC__/js/public/rem.js"></script>
 	</head>
 	<body>
 		
-	  <div class="wrap_frame">
-			<!--public head-->
+		<div >
+			<!--头部-->
 			<div class="lb_headWrap">
-				<p class="lb_headWrap_return" data-num="1" onclick="returnFun()">
-					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/bottom_nav/back@2x.png" />
-				</p>
-				<span>基因报告</span>
-			</div>
-			
-		<div class="zuidadiv">	
-			<!--title-->
-		    <p class="form_title">29Y-STR基因座分型结果</p>
-			<!--表格-->
-		    <table  frame="void" rules="all" class="biaogege">
-		    	<tr style="height:.9rem">
-		    		<td style="text-align: center;">基因座/样本号</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    	<tr>
-		    		<td >DYS458</td>
-		    		<td></td>
-		    	</tr>
-		    			    		    	
-		    	
-		    </table>			
-		
-		</div>
+                <p class="lb_headWrap_return" data-num="1" onclick="returnFun()">
+                    <img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png"/>
+                </p>
+                <span>基因导入</span>
+                <p  class="lb_headWrap_text" onClick="window.location.href='bianji.html'">编辑</p>
+            </div>
+			<div class="liebiao_ear">
+				<ul>
+					<li onclick="window.location.href='./genequery.html'">
+						<span class="span_left">0119-29Y&nbsp;&nbsp;张李兴-基因数据</span>
+						<span class="span_right"><img src="__STATIC__/img/example/youjian@2x.png"/></span>
 						
-			
-	  </div>	
-	  
-	  <script src="__STATIC__/js/public/jquery-1.8.3.js"></script>
-	  <script src="__STATIC__/js/public/public.js"></script>
-		<script type="text/javascript" src="/public/static/public/layer/layer.js"></script>
-		<script>
-			var result = '{$result}';
-			if(result == 'error'){
-				layer.open({
-					title:'提示！',
-					content:'<p style="text-align:center;">您的基因检测结果尚未生成！</p><p style="text-align:center;">请在PC上登录网站，上传您的基因数据！</p>',
-					btn:['确定'],
-					btnAlign:'c',
-				});
-			}
-		
-		</script>
-	
+					</li>
+					<li onclick="window.location.href='./genequery.html'">
+						<span class="span_left">0119-29Y&nbsp;&nbsp;张李兴-基因数据</span>
+						<span class="span_right"><img src="__STATIC__/img/example/youjian@2x.png"/></span>
+						
+					</li>
+					<li onclick="window.location.href='./genequery.html'">
+						<span class="span_left">0119-29Y&nbsp;&nbsp;张李兴-基因数据</span>
+						<span class="span_right"><img src="__STATIC__/img/example/youjian@2x.png"/></span>
+						
+					</li>
+					<li>
+						<span class="span_left">0119-29Y&nbsp;&nbsp;张李兴-基因数据</span>
+						<span class="span_right"><img src="__STATIC__/img/example/youjian@2x.png"/></span>
+						
+					</li>
+					<li onclick="window.location.href='./genequery.html'">
+						<span class="span_left">0119-29Y&nbsp;&nbsp;张李兴-基因数据</span>
+						<span class="span_right"><img src="__STATIC__/img/example/youjian@2x.png"/></span>
+						
+					</li>
+					
+				</ul>
+			</div>
+			</div>
+		</div>
+	<script src="__STATIC__/js/public/jquery-1.8.3.js" type="text/javascript" charset="utf-8"></script>
+     <script type="text/javascript" src="__STATIC__/js/public/public.js" ></script>		
 	</body>
 </html>
