--- a/application/admin/view/gene/import.html
+++ b/application/admin/view/gene/import.html
@@ -3,12 +3,12 @@
 {include file='layout/head' /}
 <body>
 	<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 基因数据库 <span
-			class="c-gray en">&gt;</span> 基因数据列表 <a class="btn btn-success radius r replace"
+			class="c-gray en">&gt;</span> 用户上传基因数据列表 <a class="btn btn-success radius r replace"
 			style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新"><i
 				class="Hui-iconfont">&#xe68f;</i></a></nav>
 	<div class="page-container">
 		<form method="GET" action="">
-		<div class="text-c"> 基因数据列表
+		<div class="text-c"> 用户上传基因数据列表
 			<input type="text" class="input-text" style="width:250px" placeholder="输入文章标题名称" value="{$search['keywords'] ? $search['keywords'] : ''}" name="search['keywords']">
 			<button type="submit" class="btn btn-success" id="" name="">
 				<i class="Hui-iconfont">&#xe665;</i>
@@ -16,26 +16,26 @@
 		</div>
 		</form>
 		<div class="cl pd-5 bg-1 bk-gray mt-20">
-			<span class="l">
+			<!-- <span class="l">
                  <a href="javascript:;" onclick="gene_info('添加基因数据')" class="btn btn-primary radius">
                     <i class="Hui-iconfont">&#xe600;</i> 
                     添加基因数据
                 </a>
-            </span> 
+            </span>  -->
             <span class="r">共有数据：<strong>{$count}</strong> 条</span> </div>
 		<table class="table table-border table-bordered table-bg">
 			<thead>
 				<tr>
-					<th scope="col" colspan="9">基因数据列表</th>
+					<th scope="col" colspan="9">用户上传基因数据列表</th>
 				</tr>
 				<tr class="text-c">
                     <th width="30">ID</th>
-                    <th width="250">标题名称</th>
-                    <th width="250">备注描述</th>
-                    <th width="100">所属会员</th>
-					<th width="100">添加时间</th>
-					<th width="100">更新时间</th>
-					<th width="60">详情</th>
+                    <th width="200">名称</th>
+                    <th width="200">所属会员</th>
+                    <th width="100">性别</th>
+					<th width="100">生日</th>
+					<th width="100">时间</th>
+					<th width="100">操作</th>
                 </tr>
 			</thead>
 			<tbody>
@@ -44,14 +44,14 @@
                 <tr class="text-c">
                     <td>{$vo.id}</td>
                     <td>{$vo.name}</td>
-                    <td>{$vo.desc}</td>
                     <td>{$user_name[$vo.user_id]}</td>
-                    <td>{$vo.addtime|date="Y-m-d H:i:s",###}</td>
-					<td>{$vo.utime|date="Y-m-d H:i:s",###}</td>
+                    <td>{$sex_name[$vo.sex]}</td>
+                    <td>{$vo.year}年{$vo.month}月{$vo.day}日</td>
+					<td>{$vo.addtime|date="Y-m-d H:i:s",###}</td>
                     <td class="td-manage" data-id="{$vo.id}">
-						<a title="查看详情" href="javascript:;" onclick="gene_info('查看或编辑基因数据','{$vo.id}')" class="ml-5"
+						<a title="下载数据包" href="/public/gene/zip/{$vo.filepath}" class="ml-5"
                             style="text-decoration:none">
-                            <i class="Hui-iconfont">&#xe695;</i>
+                            <i class="Hui-iconfont">&#xe640;</i>
                         </a>
                     </td>
                 </tr>
@@ -74,25 +74,6 @@
 			layer.closeAll();
 			window.location.replace(location.href);
 		}
-		/*
-			参数解释：
-			title	标题
-			url		请求的url
-			id		需要操作的数据id
-			w		弹出层宽度（缺省调默认值）
-			h		弹出层高度（缺省调默认值）
-		*/
-		/*基因-详情*/
-		function gene_info(title,id=0) {
-			layer.open({
-                title: title,
-                type: 2,
-                content: '/admin/gene/info?id='+id,
-                btn:false,
-                area:['80%','90%'],
-            });
-		}
-
 	</script>
 </body>
 
