--- a/application/admin/view/gene/index.html
+++ b/application/admin/view/gene/index.html
@@ -31,8 +31,12 @@
                  <a href="javascript:;" onclick="gene_info('添加基因数据')" class="btn btn-primary radius">
                     <i class="Hui-iconfont">&#xe600;</i> 
                     添加基因数据
+				</a>
+				<a href="javascript:;" onclick="gene_homologous('同位点查询')" class="btn btn-primary radius">
+                    <i class="Hui-iconfont">&#xe709;</i> 
+                    同位点查询
                 </a>
-            </span> 
+			</span> 
             <span class="r">共有数据：<strong>{$count}</strong> 条</span> </div>
 		<table class="table table-border table-bordered table-bg">
 			<thead>
@@ -86,20 +90,24 @@
 			layer.closeAll();
 			window.location.replace(location.href);
 		}
-		/*
-			参数解释：
-			title	标题
-			url		请求的url
-			id		需要操作的数据id
-			w		弹出层宽度（缺省调默认值）
-			h		弹出层高度（缺省调默认值）
-		*/
+		
 		/*基因-详情*/
 		function gene_info(title,id=0) {
 			layer.open({
                 title: title,
                 type: 2,
                 content: '/admin/gene/info?id='+id,
+                btn:false,
+                area:['80%','90%'],
+            });
+		}
+
+		/*-同位点查询-*/
+		function gene_homologous(){
+			layer.open({
+                title: '基因同位点查询',
+                type: 2,
+                content: '/admin/gene/homologous',
                 btn:false,
                 area:['80%','90%'],
             });
