--- a/application/admin/view/gene/config.html
+++ b/application/admin/view/gene/config.html
@@ -1,7 +1,7 @@
 {include file="layout/head"}
 <style>
     .table thead th{
-        color:#4ced6a;
+        color:red;
     }
     
     #query-list{
