基因查询 新增页面

--- a/application/mobile/view/user/my_gene.html
+++ b/application/mobile/view/user/my_gene.html
@@ -43,6 +43,10 @@
 				<p class="tip">您的基因检测结果尚未生成</p>
 				<p class="tip">请在PC上登录网站，上传您的基因数据</p>
 			</div>
+			
+			
+			
+			<div class="gene_chaxun" onclick="window.location.href='gene_query.html'">基因查询</div>
 
 		</div>
 		<script src="__STATIC__/js/public/jquery-1.8.3.js" type="text/javascript" charset="utf-8"></script>
