--- a/application/admin/view/gene/my_homologous.html
+++ b/application/admin/view/gene/my_homologous.html
@@ -36,7 +36,7 @@
                     <span><input name="check[]" type="checkbox" value="{$vo}" {if condition="in_array($vo,$check)"}checked{/if}> {$vo}</span>
                 {/volist}
             </div>
-            <p style="color:rgb(180, 143, 143);">查询的基因点越多，数据越精细，查询速度越快！</p>
+            <p style="color:rgb(180, 143, 143);">查询的基因点越多，数据越精细！基因查询匹配选定值上下浮动2个点</p>
 		</form>
 		<table class="table table-border table-bordered table-bg">
 			<thead>
