--- a/application/admin/view/gene/homologous.html
+++ b/application/admin/view/gene/homologous.html
@@ -41,7 +41,7 @@
                 </span>
                 {/foreach}
             </div>
-            <p style="color:rgb(180, 143, 143);">查询的基因点越多，数据越精细，查询速度越快！</p>
+            <p style="color:rgb(180, 143, 143);">查询的基因点越多，数据越精细！基因查询匹配选定值上下浮动2个点</p>
 		</form>
 		<table class="table table-border table-bordered table-bg">
 			<thead>
