后台： 基因->用户上传的数据：增加删除功能

--- a/application/admin/view/gene/import.html
+++ b/application/admin/view/gene/import.html
@@ -63,6 +63,10 @@
                             style="text-decoration:none">
                             <i class="Hui-iconfont">&#xe640;</i>
                         </a>
+                        <a title="删除" href="javascript:;" onclick="del_import('{$vo.id}')" class="ml-5"
+                            style="text-decoration:none">
+                            <i class="Hui-iconfont">&#xe6e2;</i>
+                        </a>
                     </td>
                 </tr>
 				{/volist}
@@ -85,6 +89,24 @@
 			layer.closeAll();
 			window.location.replace(location.href);
 		}
+
+        function del_import(id){
+            layer.confirm('您正在执行删除操作！', {icon: 3, title:'敏感操作提醒'}, function(index){
+				//do something
+				$.post('/admin/gene/del_import',{id:id},function(res){
+					if(res.status == 1){
+						layer.msg('操作成功！', {icon:6});
+						setTimeout(function(){
+							window.location.replace(location.href);
+						},1500);
+					}else{
+						layer.msg('操作失败，请重试！', {icon:5});
+					}
+				});
+				layer.close(index);
+			});
+        }
+
 	</script>
 </body>
 
