--- a/application/mobile/view/user/gene_analysis.html
+++ b/application/mobile/view/user/gene_analysis.html
@@ -32,7 +32,7 @@
 					<div class="swiper-wrapper">
 
 						{volist name="$data" id="vo"}
-						<div class="swiper-slide" style="border:1px solid #37afe6">
+						<div class="swiper-slide" style="border:1px solid #37afe6;box-sizing: border-box">
 							<div>
 									<p class="table_header">{$vo.name1}和{$vo.name2}</p>
 									<table frame="void" rules="all" class="biaogege">
@@ -93,19 +93,16 @@
 
 				</table>-->
 				
+				
 				<!--第二个表格-->
 				<div class="l3h5">
+					<ul class="xiala">
+						<li class="xiala_name"></li>
+						<li>平均传递次数</li>
+						<li>共祖年代数</li>
+					</ul>
 					{volist name="$data" id="vo"}
 						<div>
-
-								    
-								<ul class="xiala">
-
-											<li class="xiala_name"></li>
-											<li>平均传递次数</li>
-											<li>共祖年代数</li>
-								</ul>
-									 
 							<ul class="xiala">
 								<li class="xiala_name"><span class="first">{$vo.name1}</span><span class="he">和</span><span class="second">{$vo.name2}</span></li>
 								<li>{$vo.pass}</li>
