--- a/application/mobile/view/user/gene_analysis.html
+++ b/application/mobile/view/user/gene_analysis.html
@@ -28,7 +28,7 @@
 				<!--title-->
 
 				<!-- Swiper -->
-				<div class="swiper-container">
+				<!-- <div class="swiper-container">
 					<div class="swiper-wrapper">
 
 						{volist name="$data" id="vo"}
@@ -51,48 +51,7 @@
 						</div>
 						{/volist}
 					</div>
-				</div>
-
-				<!--<table frame="void" rules="all" class="biaogege2">
-					<tr style="height:.9rem">
-						<td></td>
-						<td style="text-align: center;">平均传递次数</td>
-						<td>共祖年代数</td>
-					</tr>
-					<tr>
-						<td>A和B</td>
-						<td>78</td>
-						<td>19</td>
-					</tr>
-					
-					<tr>
-						<td>B和C</td>
-						<td>89</td>
-						<td>19</td>
-					</tr>
-					<tr>
-						<td>C和A</td>
-						<td>89</td>
-						<td>19</td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-
-				</table>-->
-				
+				</div> -->
 				<!--第二个表格-->
 				<div class="l3h5">
 					{volist name="$data" id="vo"}
@@ -102,13 +61,13 @@
 								<ul class="xiala">
 
 											<li class="xiala_name"></li>
-											<li>平均传递次数</li>
+											<!-- <li>平均传递次数</li> -->
 											<li>共祖年代数</li>
 								</ul>
 									 
 							<ul class="xiala">
 								<li class="xiala_name"><span class="first">{$vo.name1}</span><span class="he">和</span><span class="second">{$vo.name2}</span></li>
-								<li>{$vo.pass}</li>
+								<!-- <li>{$vo.pass}</li> -->
 								<li>{$vo.cay}</li>
 							</ul>
 							<div style="text-align: left;" class="xiala_text">
