--- a/application/mobile/view/user/gene_analysis.html
+++ b/application/mobile/view/user/gene_analysis.html
@@ -68,7 +68,7 @@
 								<li>{$vo.cay}</li>
 							</ul>
 							<div style="text-align: left;" class="xiala_text">
-								<!-- <p class="fuzhi_first">{$vo.name1}</p> -->
+								<p class="fuzhi_first">{$vo.name1}</p>
 								<p class="fuzhi_second">{$vo.name2}</p>
 							</div>
 						</div>
