--- a/application/mobile/view/user/my_gene.html
+++ b/application/mobile/view/user/my_gene.html
@@ -46,7 +46,8 @@
 			
 			
 			
-			<div class="gene_chaxun" onclick="window.location.href='gene_query.html'">基因查询</div>
+			<div class="gene_chaxun" onclick="window.location.href='/mobile/user/gene_query'">基因查询</div>
+			<div class="shaixuan" onclick="window.location.href='/mobile/user/gene_matching'">基因筛选</div>
 
 		</div>
 		<script src="__STATIC__/js/public/jquery-1.8.3.js" type="text/javascript" charset="utf-8"></script>
